enable BASE model database engine

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -9,7 +9,9 @@ services:
         # env_file:
         #     - ./.env
         volumes:
-          - ./:/usr/src/app:ro
+          - ./:/usr/src/app
+          # - ./:/usr/src/app:ro
+
         command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
         environment:
