--- a/.github/workflows/build.deply.yml
+++ b/.github/workflows/build.deply.yml
@@ -2,12 +2,10 @@ name: Build and Deploy Code
 
 on: [push, pull_request]
 
-
 jobs:
   build:
     environment:
       name: testing
-
     env:
       DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
       DATABASE_PORT: ${{secrets.DATABASE_PORT}}
@@ -33,7 +31,18 @@ jobs:
           --health-retries 5
 
     runs-on: ubuntu-latest
-  
-      
-
-     
+    steps:
+      - name: pulling git repo
+        uses: actions/checkout@v2
+      - name: Install python version 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+      - name: update pip
+        run: python -m pip install --upgrade pip
+      - name: install all dependencies
+        run: pip install -r requirements.txt
+      - name: test with pytest
+        run: |
+          pip install pytest
+          pytest
