--- a/.github/workflows/build.deply.yml
+++ b/.github/workflows/build.deply.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DATABASE_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN}}
 
       - name: Set up Docker Buildx
